[package]
name = "chanseeker"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.7", features = ["blocking"] }
scraper = "0.20.0"
tokio = { version = "1.40.0", features  = ["full"] }
futures = "0.3"
fantoccini = "0.21.2"
serde = "1.0.210"
serde_json = "1.0.128"
sqlx = {version = "0.8.2", features = ["postgres"]}